


########### install files ###############
#install( FILES helpdoc.png helpbook.png helpbook_open.png  DESTINATION  ${DATA_INSTALL_DIR}/khelpcenter/icons )

kde4_install_icons( ${ICON_INSTALL_DIR} crystalsvg )




#original Makefile.am contents follow:

#
#KDE_ICON = khelpcenter
#
#khelpcenter_ICON = helpdoc helpbook helpbook_open
#khelpcenterdir = $(kde_datadir)/khelpcenter/icons
#
