KDE_ICON = khelpcenter

install-data-local:
	install -d $(DESTDIR)/$(kde_datadir)/khelpcenter/pics//locolor/16x16/apps
	install lo16-app-helpdoc.png $(DESTDIR/)$(kde_datadir)/khelpcenter/pics/locolor/16x16/apps/helpdoc.png
	install lo16-app-helpbook.png $(DESTDIR)/$(kde_datadir)/khelpcenter/pics/locolor/16x16/apps/helpbook.png
	install lo16-app-helpbook_open.png $(DESTDIR)/$(kde_datadir)/khelpcenter/pics/locolor/16x16/apps/helpbook_open.png
