KDE_ICON = khelpcenter

install-data-local:
	install -d $(DESTDIR)/$(kde_datadir)/khelpcenter/pics//locolor/16x16/apps
	install $(srcdir)/lo16-app-helpdoc.png $(DESTDIR)/$(kde_datadir)/khelpcenter/pics/locolor/16x16/apps/helpdoc.png
	install $(srcdir)/lo16-app-helpbook.png $(DESTDIR)/$(kde_datadir)/khelpcenter/pics/locolor/16x16/apps/helpbook.png
	install $(srcdir)/lo16-app-helpbook_open.png $(DESTDIR)/$(kde_datadir)/khelpcenter/pics/locolor/16x16/apps/helpbook_open.png
