
SUBDIRS = Applications Manpages Tutorials Scrollkeeper

plugin_DATA = applets.desktop contact.desktop faq.desktop info.desktop \
  links.desktop support.desktop userguide.desktop welcome.desktop \
  kicmodules.desktop kcontrolmodules.desktop konqplugins.desktop \
  kioslaves.desktop

plugindir = $(kde_datadir)/khelpcenter/plugins
