searchhandlers_DATA = htdig.desktop man.desktop docbook.desktop

searchhandlersdir = $(kde_datadir)/khelpcenter/searchhandlers

kde_bin_SCRIPTS = khc_htdig.pl khc_htsearch.pl khc_mansearch.pl \
  khc_docbookdig.pl

htdigdata_DATA = htdig_long.html

htdigdatadir = $(kde_datadir)/khelpcenter/searchhandlers/htdig
