


########### install files ###############

install( FILES .directory scrollkeeper.desktop  DESTINATION  ${DATA_INSTALL_DIR}/khelpcenter/plugins/Scrollkeeper )




#original Makefile.am contents follow:

#
#applications_DATA = .directory scrollkeeper.desktop
#applicationsdir = $(kde_datadir)/khelpcenter/plugins/Scrollkeeper
