


########### install files ###############

install( FILES .directory quickstart.desktop visualdict.desktop  DESTINATION  ${DATA_INSTALL_DIR}/khelpcenter/plugins/Tutorials )




#original Makefile.am contents follow:

#
#tut_DATA = .directory quickstart.desktop visualdict.desktop
#tutdir = $(kde_datadir)/khelpcenter/plugins/Tutorials
#
#
